# efmtool_link

./: README.md  efmtool4cobra.py  efmtool_link.ipynb  efmtool_link.py  efmtool_link_test.py  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
conda-recipe/: meta.yaml
efmtool_link/: efmtool4cobra.py  efmtool_extern.py  efmtool_intern.py
